force-app/main/default/objects/SVMXA360__CONF_SPMEvent__c/SVMXA360__CONF_SPMEvent__c.object-meta.xml
<CustomObject>
    <description>Stores the event details configured on the transaction/screen.</description>
    <label>SPM Event</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>