force-app/main/default/objects/SVMXA360__CONF_SPMEvent__c/fields/SVMXA360__ActionTarget__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionTarget__c</fullName>
    <description>Specifies the target to be invoked on triggering the event.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>