force-app/main/default/objects/SVMXA360__CONF_SPMEvent__c/fields/SVMXA360__ActionType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionType__c</fullName>
    <description>Specifies the type of action to be performed on triggering the event.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoke Webservice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>