force-app/main/default/objects/SVMXA360__CONF_SPMEvent__c/fields/SVMXA360__LayoutElementId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LayoutElementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ID of the element on which the event is configured.</description>
    <label>Layout Element</label>
    <referenceTo>SVMXA360__CONF_LayoutElement__c</referenceTo>
    <relationshipLabel>SPM Events</relationshipLabel>
    <relationshipName>SPM_Events</relationshipName>
    <type>Lookup</type>
</CustomField>