force-app/main/default/objects/SVMXA360__CONF_SPMEvent__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>Specifies the type of event to be configured.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Button Click</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>